--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "IgnacioPM",
   "license": "ISC",
   "dependencies": {
+    "@oclif/core": "^1.16.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
@@ -20,6 +22,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "heroku": "^7.62.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "react-icons": "^4.4.0",
